[package]
name = "getvacc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.6"
chrono = "0.4.19"
derive_more = "0.99.13"
env_logger = "0.8.3"
fcm = "0.9.1"
futures = "0.3.14"
reqwest = "0.11.3"
serde = "1.0.125"
serde_json = "1.0.64"
sqlx = { version = "0.5.2", features = ["sqlite", "runtime-actix-rustls", "chrono"] }
tokio = { version = "1.5.0", features = ["full"]}
